--- a/Login/Login.html
+++ b/Login/Login.html
@@ -14,14 +14,15 @@
     </header>
 
     <main>
+        
         <FORm:post id="form" name="form">
             <P id="dni_error"></P>
             <label for="usuario">Usuario : </label>
             <input id="usuario" type="text" name="Usuario / DNI" pattern="[0-9]{8}[A-Z]{1}" title="El DNI no es correcto" onblur="comprobarDni(this.value)">
-            <br><br><br>
+            <br><br>
             <P id="password_error"></P>
             <label for="password">Contraseña : </label>  
-            <input id="password" type="password" name="Contraseña" pattern="[0-9]{8}[A-Z]{1}" title="La contraseña es correcta" onblur="comprobarPass(this.value, document.getElementById(usuario).innerHTML.value)">
+            <input id="password" type="password" name="Contraseña" pattern="[0-9]{8}[A-Z]{1}" title="La contraseña es correcta" onblur="comprobarPass(document.getElementById('usuario').value), this.value">
             <br><br><br>
             <input id="hola" type="submit" name="Entrar" onclick="entrar()">
         </FORm:post>
