--- a/Login/Login.html
+++ b/Login/Login.html
@@ -22,7 +22,7 @@
             <br><br>
             <P id="password_error"></P>
             <label for="password">Contraseña : </label>  
-            <input id="password" type="password" name="Contraseña" pattern="[0-9]{8}[A-Z]{1}" title="La contraseña es correcta" onblur="comprobarPass(document.getElementById('usuario').value), this.value">
+            <input id="password" type="password" name="Contraseña" pattern="[0-9]{8}[A-Z]{1}" title="La contraseña es correcta" onblur="comprobarPass(this.value, document.getElementById('usuario').value)">
             <br><br><br>
             <input id="hola" type="submit" name="Entrar" onclick="entrar()">
         </FORm:post>
